cell overflow fix

--- a/web/view/theme/spg/assets/spg-theme.css
+++ b/web/view/theme/spg/assets/spg-theme.css
@@ -345,13 +345,15 @@ body.spg-theme table.themed > tbody > tr > th {
     color: #000;
     /* font-size: smaller; */
     /* padding: 0.0em 0.5em 0 0; */
-    /* text-align: right; */
+    text-align: left;
+    padding-left: 0.5em;
 }
 
 body.spg-theme table.themed > tbody > tr > td {
     padding: 0.3em 0 0.3em 0.6em;
     vertical-align: top;
     white-space: nowrap;
+    overflow: hidden;
     /* text-align: center; */
 }
 
@@ -359,7 +361,6 @@ body.spg-theme table.themed.small > tbody > tr > th,
 body.spg-theme table.themed.small > tbody > tr > td {
     font-size: smaller;
     max-width: 5em;
-    overflow: hidden;
 }
 
 body.spg-theme table.cell-borders {
